--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -4,8 +4,10 @@
 
 :root {
   --foreground-rgb: 255, 255, 255;
-  --background-start-rgb: 0, 0, 0; /* 블랙 배경 시작 색상 */
-  --background-end-rgb: 255, 255, 255; /* 블랙 배경 끝 색상 */
+  --background-start-rgb: 0, 0, 0;
+  /* 블랙 배경 시작 색상 */
+  --background-end-rgb: 255, 255, 255;
+  /* 블랙 배경 끝 색상 */
 }
 
 body {
@@ -14,9 +16,12 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-:root, [data-theme] {
-  --b1: 0, 0, 0; /* 블랙 배경 색상 */
-  --bc: 255, 255, 255; /* 흰색 텍스트 색상 */
+:root,
+[data-theme] {
+  --b1: 0, 0, 0;
+  /* 블랙 배경 색상 */
+  --bc: 255, 255, 255;
+  /* 흰색 텍스트 색상 */
   background-color: rgb(var(--b1));
   color: rgb(var(--bc));
 }
@@ -41,12 +46,14 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .input {
   background-color: #fff;
 }
+
 .swiper-slide img {
   display: block;
-  width: auto;
+  width: 100%;
   height: 100%;
   object-fit: cover;
 }
@@ -64,37 +71,45 @@ body {
 }
 
 .calendar-container {
-  width: 900px; /* 너비를 원하는 크기로 설정 */
-  height: 480px; /* 높이를 원하는 크기로 설정 */
-  padding: 10px; /* 가운데 정렬 */
+
   background-color: #fff;
   color: black;
+  box-sizing: border-box;
+  /* Ensure padding and borders are included in the element's total width and height */
+  overflow: hidden;
+  /* Hide overflow content */
+  position: relative;
 }
 
-/* globals.css */
+
 
 .fc-col-header-cell-cushion {
-  padding: 0;
   font-size: 14px;
 }
+
 .fc-daygrid-day-number {
   font-size: 15px;
   display: inline-block;
-  width: 100%; /* 날짜 숫자 수직 가운데 정렬 */
+  width: 100%;
 }
+
 .fc-toolbar-title {
-  margin: 0 auto;
+  margin: 5;
 }
+
 .text-red {
   color: red;
 }
+
 .fc-toolbar-title {
   font-weight: bold;
 }
+
 .text-blue {
   color: blue;
 }
+
 .fc .fc-header-toolbar {
   height: 35px;
-  font-size: 15px /* 원하는 높이로 조정 */
+  font-size: 15px
 }
