--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -132,7 +132,7 @@ body {
 
 /* 툴바 스타일 */
 .ql-toolbar {
-  background-color: #333; /* 툴바 배경색상 */
+  background-color: #ffffff; /* 툴바 배경색상 */
   border-top-left-radius: 8px; /* 에디터 모서리 둥글기 */
   border-top-right-radius: 8px; /* 에디터 모서리 둥글기 */
   border-bottom: 1px solid #000000; /* 툴바 하단 테두리 색상 */
